--- a/personal-portfolio/css/base.css
+++ b/personal-portfolio/css/base.css
@@ -1,13 +1,11 @@
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
+
+* {
+  box-sizing: border-box;
 }
 
 html {
   font-family: sans-serif;
   font-size: 62.5%;
-  box-sizing: border-box;
 }
 
 body {
@@ -31,99 +29,4 @@ li {
 a {
   text-decoration: none;
   line-height: inherit;
-}
-
-/* a img {
-  border: none;
-} */
-
-/** 
- * ===================================================================
- * 03. grid - (_grid.scss)
- *
- * ------------------------------------------------------------------- 
- */
-.row {
-  width: 94%;
-  max-width: 1140px;
-  margin: 0 auto;
-}
-
-.row:before,
-.row:after {
-  content: "";
-  display: table;
-}
-
-.row:after {
-  clear: both;
-}
-
-.row .row {
-  width: auto;
-  max-width: none;
-  margin-left: -20px;
-  margin-right: -20px;
-}
-
-[class*="col-"],
-.bgrid {
-  float: left;
-}
-
-
-.col-one {
-  width: 8.33333%;
-}
-
-.col-two,
-.col-1-6 {
-  width: 16.66667%;
-}
-
-.col-three,
-.col-1-4 {
-  width: 25%;
-}
-
-.col-four,
-.col-1-3 {
-  width: 33.33333%;
-}
-
-.col-five {
-  width: 41.66667%;
-}
-
-.col-six,
-.col-1-2 {
-  width: 50%;
-}
-
-.col-seven {
-  width: 58.33333%;
-}
-
-.col-eight,
-.col-2-3 {
-  width: 66.66667%;
-}
-
-.col-nine,
-.col-3-4 {
-  width: 75%;
-}
-
-.col-ten,
-.col-5-6 {
-  width: 83.33333%;
-}
-
-.col-eleven {
-  width: 91.66667%;
-}
-
-.col-twelve,
-.col-full {
-  width: 100%;
 }
