add: styles and swiper in services

--- a/personal-portfolio/src/css/main.css
+++ b/personal-portfolio/src/css/main.css
@@ -1,49 +1,3 @@
-/**
- * =================================================================== 
- *
- *  Kards v1.0 Main Stylesheet
- *  url: styleshout.com
- *  03-01-2016
- *  ------------------------------------------------------------------
- *  TOC:
- *  01. webfonts and iconfonts
- *  02. base style overrides
- *  03. typography & general theme styles
- *  04. preloader
- *  05. forms
- *  06. buttons 
- *  07. other components
- *  08. common styles
- *  09. header styles
- *  10. intro
- *  11. about
- *  12. resume
- *  13. portfolio
- *  14. call-to-action section
- *  15. services
- *  16. stats
- *  17. contact
- *  18. footer
- *
- * =================================================================== 
- */
-
-/** 
- * ===================================================================
- * 01. webfonts and iconfonts - (_document-setup.scss)
- *
- * ------------------------------------------------------------------- 
- */
-@import url("fonts.css");
-@import url("font-awesome/css/font-awesome.min.css");
-@import url("micons/micons.css");
-
-/** 
- * ===================================================================
- * 02. base style overrides - (_document-setup.scss)
- *
- * ------------------------------------------------------------------- 
- */
 html {
   font-size: 10px;
 }
@@ -83,10 +37,6 @@ body {
 a,
 a:visited {
   color: #000000;
-  -moz-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  -webkit-transition: all 0.3s ease-in-out;
-  -ms-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
 a:hover,
@@ -1876,7 +1826,7 @@ header .logo a {
  *
  * ------------------------------------------------------------------- 
  */
-.portfolio {
+#portfolio {
   background: #ffffff;
   padding-top: 12rem;
   padding-bottom: 12rem;
@@ -1894,17 +1844,17 @@ header .logo a {
   grid-template-columns: 1fr;
 }
 
-.portfolio .folio-item {
+#portfolio .folio-item {
   padding: 0;
   position: relative;
   overflow: hidden;
 }
-.portfolio .folio-item img {
+#portfolio .folio-item img {
   vertical-align: middle;
   transition: all 0.5s ease-in-out;
 }
 
-.portfolio .overlay {
+#portfolio .overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -1914,27 +1864,27 @@ header .logo a {
   transition: all 0.5s ease-in-out;
 }
 
-.portfolio .folio-item-table {
+#portfolio .folio-item-table {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 100%;
 }
-.portfolio .folio-item-cell {
+#portfolio .folio-item-cell {
   text-align: center;
   transition: all 0.5s ease-in-out;
   position: relative;
   left: -100%;
 }
 
-.portfolio .folio-title {
+#portfolio .folio-title {
   color: #ffffff;
   font-size: 3.3rem;
   padding: 0 3rem;
   margin-bottom: 0;
 }
-.portfolio .folio-types {
+#portfolio .folio-types {
   margin: 0;
   padding: 0;
   text-transform: uppercase;
@@ -1943,13 +1893,13 @@ header .logo a {
   letter-spacing: 0.1rem;
   color: rgba(255, 255, 255, 0.6);
 }
-.portfolio .folio-item:hover .overlay {
+#portfolio .folio-item:hover .overlay {
   background: rgba(0, 0, 0, 0.8);
 }
-.portfolio .folio-item:hover .folio-item-cell {
+#portfolio .folio-item:hover .folio-item-cell {
   left: 0;
 }
-.portfolio .folio-item:hover img {
+#portfolio .folio-item:hover img {
   transform: scale(1.05);
 }
 
@@ -1959,23 +1909,23 @@ header .logo a {
  * ------------------------------------------------------------------- 
  */
 @media only screen and (max-width: 1024px) {
-  .portfolio .folio-title {
+  #portfolio .folio-title {
     font-size: 3.1rem;
   }
 }
 @media only screen and (max-width: 768px) {
-  .portfolio-content {
+  #portfolio-content {
     grid-template-columns: 1fr;
   }
-  .portfolio .folio-title {
+  #portfolio .folio-title {
     font-size: 2.5rem;
   }
 }
 @media only screen and (max-width: 400px) {
-  .portfolio-content {
+  #portfolio-content {
     width: 90%;
   }
-  .portfolio .folio-title {
+  #portfolio .folio-title {
     font-size: 2.2rem;
   }
 }
@@ -1988,8 +1938,6 @@ header .logo a {
  */
 #services {
   background: #313131 url(../images/bg.jpg) no-repeat center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
   background-size: cover;
   padding-top: 12rem;
   padding-bottom: 12rem;
@@ -2019,8 +1967,11 @@ header .logo a {
 #services .section-intro p {
   color: rgba(255, 255, 255, 0.7);
 }
-.services-content {
+#services-content {
   max-width: 1200px;
+}
+#swiper-services {
+  width: 80%;
 }
 .services-list {
   margin-top: 1.2rem;
@@ -2045,26 +1996,9 @@ header .logo a {
   color: rgba(255, 255, 255, 0.6);
 }
 
-/* pagination */
-.owl-pagination {
-  text-align: center;
-  width: 100%;
-  margin: 0.6rem 0 0;
-}
-.owl-theme .owl-controls .owl-page {
-  display: inline-block;
-}
-.owl-theme .owl-controls .owl-page span {
-  display: block;
-  width: 1.2rem;
-  height: 1.2rem;
-  margin: 1.2rem 0.8rem 0 0.8rem;
-  border-radius: 50%;
-  display: inline-block;
-  background: #ffffff;
-}
-.owl-theme .owl-controls .owl-page.active span {
-  background: #ff0077;
+.swiper-pagination {
+  --swiper-pagination-bullet-inactive-color: #fff;
+  --swiper-pagination-color: #ff0077;
 }
 
 /** 
@@ -2125,12 +2059,12 @@ header .logo a {
  */
 @media only screen and (max-width: 1024px) {
   .stats {
-	flex-wrap: wrap;
+    flex-wrap: wrap;
   }
 }
 @media only screen and (max-width: 768px) {
   .stats .stat {
-	border: none;
+    border: none;
   }
 }
 
@@ -2148,10 +2082,10 @@ header .logo a {
 #contact .section-intro h1 {
   color: white;
 }
-#contact .section-intro h5 {
+.contact .section-intro h5 {
   color: #ff0077;
 }
-#contact .section-intro p {
+.contact .section-intro p {
   color: rgba(255, 255, 255, 0.7);
 }
 
@@ -2176,138 +2110,23 @@ header .logo a {
   color: rgba(255, 255, 255, 0.3);
 }
 
-#contact form {
+.contact form {
   margin-top: 0;
   margin-bottom: 3rem;
 }
-#contact form .form-field {
+.contact form .form-field {
   position: relative;
-}
-#contact form .form-field:before,
-#contact form .form-field:after {
-  content: "";
-  display: table;
-}
-#contact form .form-field:after {
-  clear: both;
-}
-#contact form .form-field label {
-  font-family: "poppins-bold", sans-serif;
-  font-size: 1.1rem;
-  line-height: 2.4rem;
-  position: absolute;
-  bottom: -1.2rem;
-  right: 0.6rem;
-  text-transform: uppercase;
-  letter-spacing: 0.1rem;
-  padding: 0 2rem;
-  margin: 0;
-  color: #ffffff;
-  background: #ff0077;
-}
-#contact form .form-field label::after {
-  position: absolute;
-  left: -5px;
-  top: 50%;
-  margin-top: -6px;
-  border-top: 5px solid transparent;
-  border-bottom: 5px solid transparent;
-  border-right: 5px solid #ff0077;
-  content: "";
-}
-#contact input[type="text"],
-#contact input[type="password"],
-#contact input[type="email"],
-#contact textarea {
-  width: 100%;
-  color: rgba(255, 255, 255, 0.7);
-  margin-bottom: 0;
-  border: none;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-}
-#contact input[type="text"],
-#contact input[type="password"],
-#contact input[type="email"] {
-  height: 6.6rem;
-  padding: 1.8rem 2rem;
-}
-#contact input[type="text"]:focus,
-#contact input[type="password"]:focus,
-#contact input[type="email"]:focus {
-  border-color: #ff0077;
-  color: #ffffff;
-}
-#contact textarea {
-  min-height: 20rem;
-  padding: 1.8rem 2rem;
-}
-#contact textarea:focus {
-  border-color: #ff0077;
-  color: #ffffff;
-}
-#contact button.submitform {
-  font-size: 1.5rem;
-  display: block;
-  letter-spacing: 0.2rem;
-  height: 6.6rem;
-  line-height: 6.6rem;
-  padding: 0 3rem;
-  margin-top: 4.8rem;
-  width: 100%;
-  background: #ff0077;
-  color: #ffffff;
-}
-#contact button.submitform:hover,
-#contact button.submitform:focus {
-  background: #cc005f;
-}
-#message-warning,
-#message-success {
-  display: none;
-  background: #0d0d0d;
-  border-radius: 3px;
-  padding: 3rem;
-  margin-bottom: 3.6rem;
-  width: 100%;
-}
-#message-warning {
-  color: #fa0003;
-}
-#message-success {
-  color: #ff0077;
-}
-#message-warning i,
-#message-success i {
-  margin-right: 10px;
 }
 
-/* form loader */
-#submit-loader {
-  display: none;
-  position: relative;
-  left: 0;
-  top: 1.8rem;
-  width: 100%;
-  text-align: center;
-}
-#submit-loader .text-loader {
-  display: none;
-  font-family: "poppins-bold", sans-serif;
-  color: #ffffff;
-  letter-spacing: 0.3rem;
-  text-transform: uppercase;
-}
-.oldie #submit-loader .s-loader {
-  display: none;
-}
-.oldie #submit-loader .text-loader {
-  display: block;
-}
 .contact-info {
   margin: 4.8rem auto 0;
   font-family: "poppins-regular", sans-serif;
   font-size: 1.5rem;
   text-align: center;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  gap: 3rem;
 }
 .contact-info .collapse {
   padding: 0;
@@ -2392,6 +2211,8 @@ footer {
   padding-bottom: 3rem;
   font-size: 1.4rem;
   font-family: "poppins-regular", sans-serif;
+  display: flex;
+  justify-content: center;
 }
 footer a,
 footer a:visited {
@@ -2401,9 +2222,12 @@ footer a:hover,
 footer a:focus {
   color: #ff0077;
 }
-footer .row {
-  max-width: 900px;
+.footer-social-container {
+  text-align: center;
 }
+/* footer .row {
+  max-width: 900px;
+} */
 footer .social {
   text-align: right;
 }
@@ -2423,8 +2247,9 @@ footer .footer-social li {
 footer .footer-social li a {
   color: #ffffff;
 }
+
 footer .copyright span {
-  display: inline-block;
+  text-align: center;
 }
 footer .copyright span::after {
   content: "|";
@@ -2482,10 +2307,6 @@ footer .copyright span:last-child::after {
   color: #ffffff;
   text-align: center;
   text-transform: uppercase;
-  -moz-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  -webkit-transition: all 0.3s ease-in-out;
-  -ms-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
 #go-top a i {
