--- a/personal-portfolio/src/css/main.css
+++ b/personal-portfolio/src/css/main.css
@@ -695,7 +695,7 @@ header .logo a {
 
 /** 
  * ===================================================================
- * 13. portfolio - (_layout.scss)
+ * portfolio
  *
  * ------------------------------------------------------------------- 
  */
@@ -805,7 +805,7 @@ header .logo a {
 
 /** 
  * ===================================================================
- * 15. services - (_layout.scss)
+ *  services
  *
  * ------------------------------------------------------------------- 
  */
@@ -876,7 +876,7 @@ header .logo a {
 
 /** 
  * ===================================================================
- * 16. stats - (_layout.scss)
+ *  stats
  *
  * ------------------------------------------------------------------- 
  */
@@ -943,7 +943,7 @@ header .logo a {
 
 /** 
  * ===================================================================
- * 17. contact - (_layout.scss)
+ *  contact 
  *
  * ------------------------------------------------------------------- 
  */
@@ -960,35 +960,6 @@ header .logo a {
 }
 .contact .section-intro p {
   color: rgba(255, 255, 255, 0.7);
-}
-
-/* contact form */
-.contact-form {
-  max-width: 740px;
-}
-
-.contact-form ::-webkit-input-placeholder {
-  color: rgba(255, 255, 255, 0.3);
-}
-.contact-form :-moz-placeholder {
-  color: rgba(255, 255, 255, 0.3); /* Firefox 18- */
-}
-.contact-form ::-moz-placeholder {
-  color: rgba(255, 255, 255, 0.3); /* Firefox 19+ */
-}
-.contact-form :-ms-input-placeholder {
-  color: rgba(255, 255, 255, 0.3);
-}
-.contact-form .placeholder {
-  color: rgba(255, 255, 255, 0.3);
-}
-
-.contact form {
-  margin-top: 0;
-  margin-bottom: 3rem;
-}
-.contact form .form-field {
-  position: relative;
 }
 
 .contact-info {
@@ -1015,68 +986,9 @@ header .logo a {
   color: #ff0077;
 }
 
-/**
- * loader animation - (_layout.scss)
- * --------------------------------------------------------------- 
- */
-.s-loader {
-  margin: 1.2rem auto 3rem;
-  width: 70px;
-  text-align: center;
-  -webkit-transform: translateX(0.45rem);
-  -ms-transform: translateX(0.45rem);
-  transform: translateX(0.45rem);
-}
-.s-loader > div {
-  width: 1rem;
-  height: 1rem;
-  background-color: #ffffff;
-  border-radius: 100%;
-  display: inline-block;
-  margin-right: 0.9rem;
-  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
-  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
-}
-.s-loader .bounce1 {
-  -webkit-animation-delay: -0.32s;
-  animation-delay: -0.32s;
-}
-.s-loader .bounce2 {
-  -webkit-animation-delay: -0.16s;
-  animation-delay: -0.16s;
-}
-@-webkit-keyframes sk-bouncedelay {
-  0%,
-  80%,
-  100% {
-    -webkit-transform: scale(0);
-    -ms-transform: scale(0);
-    transform: scale(0);
-  }
-  40% {
-    -webkit-transform: scale(1);
-    -ms-transform: scale(1);
-    transform: scale(1);
-  }
-}
-@keyframes sk-bouncedelay {
-  0%,
-  80%,
-  100% {
-    -webkit-transform: scale(0);
-    -ms-transform: scale(0);
-    transform: scale(0);
-  }
-  40% {
-    -webkit-transform: scale(1);
-    -ms-transform: scale(1);
-    transform: scale(1);
-  }
-}
-
 /** 
  * ===================================================================
- * 18. footer - (_layout.scss)
+ *  footer
  *
  * ------------------------------------------------------------------- 
  */
@@ -1158,7 +1070,7 @@ footer .copyright span:last-child::after {
 }
 
 /**
- * go to top - (_layout.scss)
+ * go to top 
  * ------------------------------------------------------------------- 
  */
 #go-top {
@@ -1189,5 +1101,3 @@ footer .copyright span:last-child::after {
 #go-top a:hover {
   background: #000000;
 }
-
-/*# sourceMappingURL=main.css.map */
