--- a/personal-portfolio/src/css/main.css
+++ b/personal-portfolio/src/css/main.css
@@ -1,5 +1,3 @@
-
-
 /** 
  * ===================================================================
  **** header 
@@ -120,7 +118,8 @@ header .logo a {
 #main-nav-wrap {
   display: block;
   width: 100%;
-  font-family: "poppins-medium", sans-serif;
+  font-family: poppins;
+  font-weight: 500;
   font-size: 1.5rem;
   position: absolute;
   top: 100%;
@@ -225,7 +224,8 @@ header .logo a {
 }
 .intro-content h1 {
   color: #ffffff;
-  font-family: "poppins-medium", sans-serif;
+  font-family: poppins;
+  font-weight: bolder;
   font-size: 8.4rem;
   line-height: 1.071;
   max-width: 900px;
@@ -235,9 +235,11 @@ header .logo a {
   margin-right: auto;
   text-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
+
 .intro-content h5 {
   color: #cc005f;
-  font-family: "poppins-bold", sans-serif;
+  font-family: poppins;
+  font-weight: bolder;
   font-size: 2.3rem;
   line-height: 1.565;
   margin-bottom: 0;
@@ -246,8 +248,9 @@ header .logo a {
   text-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
 }
 .intro-content .intro-position {
-  font-family: "lora-regular", serif;
-  font-size: 1.7rem;
+  font-family: lora;
+  font-weight: 400;
+  font-size: 1.5rem;
   line-height: 2.4rem;
   text-transform: uppercase;
   letter-spacing: 0.2rem;
@@ -364,6 +367,7 @@ header .logo a {
   .intro-content h1 {
     font-size: 4.6rem;
     margin-bottom: 0.6rem;
+    max-width: 90%;
   }
   .intro-content h5 {
     font-size: 1.5rem;
@@ -375,6 +379,9 @@ header .logo a {
   }
   .intro-content .intro-position span {
     padding: 0 0.6rem;
+  }
+  .intro-content .intro-position span:first-child::before {
+    display: none;
   }
   .intro-content .intro-position span::before,
   .intro-content .intro-position span::after {
@@ -421,11 +428,14 @@ header .logo a {
   margin: 0 auto;
   display: flex;
   justify-content: center;
+  gap: 2em;
+  width: 90%;
   max-width: 850px;
   margin-bottom: 3.6rem;
 }
 .about-content h3 {
-  font-family: "poppins-bold", sans-serif;
+  font-family: poppins;
+  font-weight: bolder;
   font-size: 1.8rem;
   text-transform: uppercase;
   letter-spacing: 0.25rem;
@@ -440,7 +450,8 @@ header .logo a {
   margin-bottom: 0.6rem;
 }
 .about-content .info-list li strong {
-  font-family: "poppins-bold", sans-serif;
+  font-family: poppins;
+  font-weight: bolder;
   color: #313131;
   text-transform: uppercase;
   letter-spacing: 0.2rem;
@@ -449,7 +460,8 @@ header .logo a {
 }
 .about-content .info-list li span {
   display: block;
-  font-family: "poppins-regular", sans-serif;
+  font-family: poppins;
+  font-weight: 400;
   color: #888888;
   font-size: 1.5rem;
   line-height: 1;
@@ -507,7 +519,6 @@ header .logo a {
     margin-top: 3rem;
   }
   .intro-info img {
-    border: 2px solid red;
     height: 6.6rem;
     width: 6.6rem;
     float: none;
@@ -515,6 +526,11 @@ header .logo a {
   }
   .intro-info .lead {
     padding-left: 0;
+    text-align: center;
+  }
+  .about-content {
+    display: flex;
+    flex-direction: column;
     text-align: center;
   }
 }
@@ -541,6 +557,36 @@ header .logo a {
   color: #ff0077;
 }
 
+.grey-section {
+  background: #ebebeb;
+}
+.grey-section p.lead {
+  color: #7d7d7d;
+}
+.section-intro {
+  max-width: 700px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  margin-bottom: 3.6rem;
+  position: relative;
+  border-color: 2px solid red;
+}
+.section-intro h1 {
+  font-family: poppins;
+  font-weight: bolder;
+  font-size: 3.6rem;
+  color: #313131;
+  line-height: 1.25;
+  margin-bottom: 1.2rem;
+}
+.section-intro h5 {
+  color: #ff0077;
+  font-size: 1.6rem;
+  line-height: 1.875;
+  margin-bottom: 0.3rem;
+  letter-spacing: 0.4rem;
+}
 #resume .resume-timeline {
   max-width: 980px;
 }
@@ -592,7 +638,8 @@ header .logo a {
   margin-bottom: 0;
 }
 #resume .timeline-header p {
-  font-family: "poppins-regular", sans-serif;
+  font-family: poppins;
+  font-weight: 400;
   font-size: 1.6rem;
   color: #888888;
 }
@@ -620,6 +667,31 @@ header .logo a {
  * resume
  * ------------------------------------------------------------------- 
  */
+
+@media only screen and (max-width: 768px) {
+  .section-intro {
+    max-width: 650px;
+  }
+  .section-intro h1 {
+    font-size: 3rem;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .section-intro h1 {
+    font-size: 2.6rem;
+  }
+  .section-intro h5 {
+    font-size: 1.5rem;
+    letter-spacing: 0.3rem;
+  }
+}
+@media only screen and (max-width: 400px) {
+  .section-intro h1 {
+    font-size: 2.4rem;
+  }
+}
+
+
 @media only screen and (max-width: 1024px) {
   #resume .timeline-header {
     padding-right: 50px;
@@ -761,7 +833,8 @@ header .logo a {
   margin: 0;
   padding: 0;
   text-transform: uppercase;
-  font-family: "poppins-regular", sans-serif;
+  font-family: poppins;
+  font-weight: 400;
   font-size: 1.2rem;
   letter-spacing: 0.1rem;
   color: rgba(255, 255, 255, 0.6);
@@ -917,7 +990,8 @@ header .logo a {
   font-size: 3.6rem;
   margin-top: 1.2rem;
   margin-bottom: 0;
-  font-family: "poppins-medium", sans-serif;
+  font-family: poppins;
+  font-weight: 500;
   color: white;
 }
 
@@ -964,7 +1038,8 @@ header .logo a {
 
 .contact-info {
   margin: 4.8rem auto 0;
-  font-family: "poppins-regular", sans-serif;
+  font-family: poppins;
+  font-weight: 400;
   font-size: 1.5rem;
   text-align: center;
   display: flex;
@@ -995,7 +1070,8 @@ header .logo a {
 footer {
   padding-bottom: 3rem;
   font-size: 1.4rem;
-  font-family: "poppins-regular", sans-serif;
+  font-family: poppins;
+  font-weight: 400;
   display: flex;
   justify-content: center;
 }
