--- a/personal-portfolio/src/css/main.css
+++ b/personal-portfolio/src/css/main.css
@@ -418,6 +418,7 @@ header .logo a {
   object-fit: cover;
   height: 15rem;
   width: 15rem;
+  aspect-ratio: 1/1;
   border-radius: 50%;
   float: left;
 }
