feature: añado funcionalidad a state

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -192,7 +192,7 @@ header .logo a {
  * ------------------------------------------------------------------- 
  */
 #intro {
-  background: #151515 url(../images/intro-bg.jpg) no-repeat center bottom;
+  background: #151515 url(../../images/intro-bg.jpg) no-repeat center bottom;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
@@ -903,7 +903,7 @@ header .logo a {
  * ------------------------------------------------------------------- 
  */
 #services {
-  background: #313131 url(../images/bg.jpg) no-repeat center;
+  background: #313131 url(../../images/bg.jpg) no-repeat center;
   background-size: cover;
   padding-top: 12rem;
   padding-bottom: 12rem;
