añado botones de contacto en header

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -252,6 +252,12 @@ button.stroke:hover,
   color: #fff;
 }
 
+.button.button-header {
+  color: white;
+  background-color: #000000;
+}
+
+
 /* * skillbars ******************************* */
 
 .skill-bars {
